[gd_scene load_steps=15 format=3 uid="uid://cixqok3ovxqfk"]

[ext_resource type="Texture2D" uid="uid://lqv6uhaidra" path="res://pt_menu_bg.png" id="1_feqpv"]
[ext_resource type="Texture2D" uid="uid://c6ch8agak5vru" path="res://pl_splash.png" id="2_v3aav"]
[ext_resource type="FontFile" uid="uid://csyh21sbucdx8" path="res://UI/Fonts/Nintendo-DS-BIOS.ttf" id="3_kbggd"]
[ext_resource type="Script" path="res://Scripts/UI/MainMenuContainer.gd" id="4_5nfxh"]
[ext_resource type="FontFile" uid="uid://ddhyo3nfm2npi" path="res://UI/Fonts/nk57-monospace-cd-rg.otf" id="4_vkccs"]
[ext_resource type="AudioStream" uid="uid://ciqfb8af5opuw" path="res://Sounds/Music/alba.ogg" id="5_1uxsj"]
[ext_resource type="Script" path="res://Scripts/UI/LevelSelect.gd" id="5_8vwcx"]
[ext_resource type="AudioStream" uid="uid://dxb0rqeythed2" path="res://Sounds/Music/prototype menu.ogg" id="6_43p1y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfb7d"]
bg_color = Color(0.0134453, 0.0127161, 0.0864392, 0.419608)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.411765, 0.411765, 0.411765, 1)
corner_radius_top_left = 6
corner_radius_bottom_right = 6
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33nmg"]
bg_color = Color(0.321569, 0.32549, 0.776471, 0.419608)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_bottom_right = 6
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnov2"]
bg_color = Color(0.321569, 0.32549, 0.776471, 0.419608)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_bottom_right = 6
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yr25q"]
bg_color = Color(0.129412, 0.12549, 0.376471, 0.419608)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_bottom_right = 6
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_8fp34"]
default_font = ExtResource("4_vkccs")
default_font_size = 21
Button/styles/disabled = SubResource("StyleBoxFlat_mfb7d")
Button/styles/focus = SubResource("StyleBoxFlat_33nmg")
Button/styles/hover = SubResource("StyleBoxFlat_lnov2")
Button/styles/normal = SubResource("StyleBoxFlat_yr25q")
Fonts/fonts/normal = ExtResource("3_kbggd")
HBoxContainer/constants/separation = 9
VBoxContainer/constants/separation = 9

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1p6d8"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("6_43p1y")
stream_0/weight = 4.0
stream_1/stream = ExtResource("5_1uxsj")
stream_1/weight = 1.0

[node name="MainMenu" type="Node2D"]

[node name="PtMenuBg" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_feqpv")

[node name="PlSplash" type="Sprite2D" parent="."]
position = Vector2(320, 132)
texture = ExtResource("2_v3aav")

[node name="Label" type="Label" parent="PlSplash"]
offset_left = 116.0
offset_top = -7.0
offset_right = 224.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_kbggd")
theme_override_font_sizes/font_size = 16
text = "(early prototype ver.)"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 224.0
offset_top = 166.0
offset_right = 437.0
offset_bottom = 337.0
theme = SubResource("Theme_8fp34")
alignment = 1
script = ExtResource("4_5nfxh")

[node name="LevelSelect" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Quit")
text = "Level Select"

[node name="Records" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Records"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LevelSelect")
text = "Quit"

[node name="LevelSelect" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 84.0
offset_top = 224.0
offset_right = 556.0
offset_bottom = 265.0
theme = SubResource("Theme_8fp34")
alignment = 1
script = ExtResource("5_8vwcx")

[node name="Stage1" type="Button" parent="LevelSelect"]
layout_mode = 2
text = "PTStage1"

[node name="Stage2" type="Button" parent="LevelSelect"]
layout_mode = 2
text = "PTStage2"

[node name="TestStage" type="Button" parent="LevelSelect"]
layout_mode = 2
text = "TestWorldNode"

[node name="Back" type="Button" parent="LevelSelect"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_1p6d8")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/LevelSelect" to="VBoxContainer" method="_on_level_select_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="VBoxContainer" method="_on_quit_pressed"]
[connection signal="pressed" from="LevelSelect/Stage1" to="LevelSelect" method="_on_stage_1_pressed"]
[connection signal="pressed" from="LevelSelect/Stage2" to="LevelSelect" method="_on_stage_2_pressed"]
[connection signal="pressed" from="LevelSelect/TestStage" to="LevelSelect" method="_on_test_stage_pressed"]
[connection signal="pressed" from="LevelSelect/Back" to="LevelSelect" method="_on_back_pressed"]
